
    HADOOP-11184. Update Hadoop's lz4 to version r123. (cmccabe)

    HADOOP-11181. Generalized o.a.h.s.t.d.DelegationTokenManager to handle all
    sub-classes of AbstractDelegationTokenIdentifier. (zjshen)

    HADOOP-11207. Enhanced common DelegationTokenAuthenticationHandler to support
    proxy-users on Delegation-token management operations. (Zhijie Shen via
    vinodkv)

    HADOOP-11254. Changed visibility of AccessControlList to be public for
    consumption by ecosystem. (Zhijie Shen via vinodkv)

    HADOOP-11216. Improve Openssl library finding. (cmccabe via yliu)

  OPTIMIZATIONS

    HADOOP-10838. Byte array native checksumming. (James Thomas via todd)

    HADOOP-10696. Add optional attributes to KeyProvider Options and Metadata.
    (tucu)

    HADOOP-10695. KMSClientProvider should respect a configurable timeout.
    (yoderme via tucu)

    HADOOP-10757. KeyProvider KeyVersion should provide the key name.
    (asuresh via tucu)

    HADOOP-10769. Create KeyProvider extension to handle delegation tokens.
    (Arun Suresh via atm)

    HADOOP-10812. Delegate KeyProviderExtension#toString to underlying
    KeyProvider. (wang)

    HADOOP-10736. Add key attributes to the key shell. (Mike Yoder via wang)

    HADOOP-10824. Refactor KMSACLs to avoid locking. (Benoy Antony via umamahesh)

    HADOOP-10841. EncryptedKeyVersion should have a key name property.
    (asuresh via tucu)

    HADOOP-10842. CryptoExtension generateEncryptedKey method should
    receive the key name. (asuresh via tucu)

    HADOOP-10750. KMSKeyProviderCache should be in hadoop-common.
    (asuresh via tucu)

    HADOOP-10720. KMS: Implement generateEncryptedKey and decryptEncryptedKey
    in the REST API. (asuresh via tucu)

    HADOOP-10891. Add EncryptedKeyVersion factory method to
    KeyProviderCryptoExtension. (wang)

    HADOOP-10756. KMS audit log should consolidate successful similar requests.
    (asuresh via tucu)
