@@ -243,10 +243,14 @@ Release 2.6.0 - UNRELEASED
     proxy-users on Delegation-token management operations. (Zhijie Shen via
     vinodkv)
 
+    HADOOP-11216. Improve Openssl library finding. (cmccabe via yliu)
+
     HADOOP-11254. Changed visibility of AccessControlList to be public for
     consumption by ecosystem. (Zhijie Shen via vinodkv)
 
-    HADOOP-11216. Improve Openssl library finding. (cmccabe via yliu)
+    HADOOP-11286. Copied LimitInputStream from guava-0.14 to hadoop to avoid
+    issues with newer versions of guava in applications. (Christopher Tubbs
+    via acmurthy)
 
   OPTIMIZATIONS
 
